# cypher-cpi

./: Cargo.toml  README.md  idl.json
anchor-discriminator/: Cargo.toml
anchor-discriminator/src/: lib.rs
cypher/: Cargo.toml  idl.json
cypher/src/: client.rs  lib.rs  utils.rs
example/: Anchor.toml
example/programs/example-cpi/: Cargo.toml
example/programs/example-cpi/src/: lib.rs
example/tests/: example-cpi.ts
faucet/: Cargo.toml
faucet/src/: lib.rs
src/: client.rs  constants.rs  lib.rs
src/cypher/: Cargo.toml
src/cypher-client/: Cargo.toml
src/cypher-client/src/: client.rs  constants.rs  lib.rs  utils.rs
src/cypher-cpi/: Cargo.toml  idl.json
src/cypher-cpi/src/: client.rs  constants.rs  lib.rs  serum_cpi.rs  serum_slab.rs  utils.rs
src/cypher/src/: client.rs  utils.rs
src/faucet/: Cargo.toml  idl.json
src/faucet/src/: lib.rs
