[package]
authors = ["Hugo <hoak@offpiste.io>"]
description = "A client library for Cypher Protocol."
edition = "2021"
keywords = ["solana", "anchor", "cypher", "client"]
license = "Apache-2.0"
version = "0.1.0"
name = "cypher-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mainnet-beta = [ "cypher-cpi/mainnet-beta" ]

[dependencies]
solana-sdk =  "~1.10.25"
arrayref = "0.3.6"
bytemuck = "1.4.0"
anchor-discriminator = { path = "../anchor-discriminator/" }
cypher-cpi = { path = "../cypher-cpi/" }
anchor-lang = ">0.24.2"
anchor-spl = { version = ">0.24.2", features = [ "token", "associated_token", "dex" ] }
serum_dex = { git = "https://github.com/chugach-foundation/serum-dex.git", rev = "2fab8b9", features = [ "fuzz", "no-entrypoint" ] }
