[package]
name = "example-cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/chugach-foundation/anchor.git" }
anchor-spl = { git = "https://github.com/chugach-foundation/anchor.git", features = [ "token", "dex" ] }
cypher = { path = "../../../src/cypher-cpi/" }
serum_dex = { git = "https://github.com/chugach-foundation/serum-dex.git", rev = "2fab8b9", features = ["fuzz", "no-entrypoint" ] }
